--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ tr:nth-child(even) td{background:#FBFBFD;}
   <section id="ahlifumigasi" class="card" role="tabpanel">
     <div class="screenshot">
       <p class="small">Screenshot:</p>
-      <img src="images/ahlifumigasi.png" alt="Ahlifumigasi September" />
+      <img src="ahlifumigasi.png" alt="Ahlifumigasi September" />
     </div>
     <h2>Ahlifumigasi.com — Ringkasan Performa</h2>
     <p class="small">Agustus → September 2025</p>
@@ -95,7 +95,7 @@ tr:nth-child(even) td{background:#FBFBFD;}
   <section id="sensorgempa" class="card" role="tabpanel" hidden>
     <div class="screenshot">
       <p class="small">Screenshot:</p>
-      <img src="images/sensorgempa.png" alt="Ahlifumigasi September" />
+      <img src="sensorgempa.png" alt="Ahlifumigasi September" />
     </div>
     <h2>Sensorgempa.com — Ringkasan Performa</h2>
     <p class="small">Agustus → September 2025</p>
@@ -123,7 +123,7 @@ tr:nth-child(even) td{background:#FBFBFD;}
   <section id="tanogaido" class="card" role="tabpanel" hidden>
     <div class="screenshot">
       <p class="small">Screenshot:</p>
-      <img src="images/tanogaido.png" alt="Ahlifumigasi September" />
+      <img src="tanogaido.png" alt="Ahlifumigasi September" />
     </div>
     <h2>Tanogaido.com — Ringkasan Performa</h2>
     <p class="small">Agustus → September 2025</p>
@@ -151,7 +151,7 @@ tr:nth-child(even) td{background:#FBFBFD;}
   <section id="herbmedicine" class="card" role="tabpanel" hidden>
     <div class="screenshot">
       <p class="small">Screenshot:</p>
-      <img src="images/herbmedicine.png" alt="Ahlifumigasi September" />
+      <img src="herbmedicine.png" alt="Ahlifumigasi September" />
     </div>
     <h2>Herbmedicineindonesia.com — Ringkasan Performa</h2>
     <p class="small">Agustus → September 2025</p>
@@ -179,7 +179,7 @@ tr:nth-child(even) td{background:#FBFBFD;}
   <section id="imporbarang" class="card" role="tabpanel" hidden>
     <div class="screenshot">
       <p class="small">Screenshot:</p>
-      <img src="images/importbarangjepang.png" alt="Ahlifumigasi September" />
+      <img src="importbarangjepang.png" alt="Ahlifumigasi September" />
     </div>
     <h2>Imporbarangjepang.com — Ringkasan Performa</h2>
     <p class="small">Agustus → September 2025</p>
