Revise SEO report for September to October 2025
Updated SEO report for September to October 2025, including changes in performance metrics and analysis for various domains.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+
 <html lang="id">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>SEO Performance Report – Agustus vs September 2025</title>
 <style>
 :root{
@@ -48,67 +49,137 @@ tr:nth-child(even) td{background:#FBFBFD;}
 </style>
 </head>
 <body>
-<header><img src="logo.png" alt="Logo" /></header>
-
+<header><img alt="Logo" src="logo.png"/></header>
 <div class="container">
-  <h1>Laporan SEO Agustus–September 2025</h1>
-  <p class="small">Diupdate: <strong>2025-10-01</strong> — Sumber data: Google Search Console.</p>
-
-  <nav class="tabs" role="tablist" aria-label="Pilih domain">
-    <button class="tab-btn" role="tab" aria-selected="true" aria-controls="ahlifumigasi">Ahlifumigasi.com</button>
-    <button class="tab-btn" role="tab" aria-selected="false" aria-controls="sensorgempa">Sensorgempa.com</button>
-    <button class="tab-btn" role="tab" aria-selected="false" aria-controls="tanogaido">Tanogaido.com</button>
-    <button class="tab-btn" role="tab" aria-selected="false" aria-controls="herbmedicine">Herbmedicineindonesia.com</button>
-    <button class="tab-btn" role="tab" aria-selected="false" aria-controls="imporbarang">Imporbarangjepang.com</button>
-  </nav>
-
-  <!-- ========== AHLIFUMIGASI ========== -->
- 
-  <section id="ahlifumigasi" class="card" role="tabpanel">
-    <div class="screenshot">
-      <p class="small">Screenshot:</p>
-      <img src="ahlifumigasi.png" alt="Ahlifumigasi September" />
-    </div>
-    <h2>Ahlifumigasi.com — Ringkasan Performa</h2>
-    <p class="small">Agustus → September 2025</p>
-    <div class="table-wrapper">
-      <table>
-        <thead><tr><th>Metrik</th><th>Agustus</th><th>September</th><th>Perubahan Absolut</th><th>Perubahan %</th><th>Tren</th></tr></thead>
-        <tbody>
-          <tr><td>Klik</td><td>70</td><td>77</td><td>+7</td><td>+10%</td><td class="trend-up">↗</td></tr>
-          <tr><td>Tayangan</td><td>5160</td><td>4330</td><td>-830</td><td>-16.1%</td><td class="trend-down">↘</td></tr>
-          <tr><td>CTR</td><td>1.37%</td><td>1.8%</td><td>+0.43 pp</td><td>+31.4%</td><td class="trend-up">↗</td></tr>
-          <tr><td>Posisi</td><td>23.4</td><td>17.2</td><td>-6.2</td><td>-26.5% membaik</td><td class="trend-up">↗</td></tr>
-        </tbody>
-      </table>
-    </div>
-
-    <div class="analysis">
-      <h4>Executive summary</h4><ul><li>Klik naik walau tayangan turun.</li><li>CTR lebih baik.</li><li>Posisi membaik signifikan.</li></ul>
-      <h4>Penyebab potensial</h4><ul><li>Ranking naik untuk kueri utama.</li><li>Snippet lebih menarik.</li></ul>
-      <h4>Tindakan prioritas</h4><ul><li>Skalakan konten halaman yang naik.</li><li>Pertahankan optimasi snippet.</li></ul>
-      <h4>KPI Monitoring</h4><ul><li>CTR per kueri.</li><li>Posisi rata-rata kueri utama.</li></ul>
-    </div>
-  </section>
-
-  <!-- ========== SENSORGEMPA ========== -->
-  <section id="sensorgempa" class="card" role="tabpanel" hidden>
-    <div class="screenshot">
-      <p class="small">Screenshot:</p>
-      <img src="sensorgempa.png" alt="Ahlifumigasi September" />
-    </div>
-    <h2>Sensorgempa.com — Ringkasan Performa</h2>
-    <p class="small">Agustus → September 2025</p>
-    <div class="table-wrapper">
-      <table>
-        <thead><tr><th>Metrik</th><th>Agustus</th><th>September</th><th>Perubahan Absolut</th><th>Perubahan %</th><th>Tren</th></tr></thead>
-        <tbody>
-          <tr><td>Klik</td><td>430</td><td>400</td><td>-30</td><td>-7%</td><td class="trend-down">↘</td></tr>
-          <tr><td>Tayangan</td><td>37553</td><td>49700</td><td>+12147</td><td>+32.3%</td><td class="trend-up">↗</td></tr>
-          <tr><td>CTR</td><td>1.03%</td><td>0.8%</td><td>-0.23 pp</td><td>-22.3%</td><td class="trend-down">↘</td></tr>
-          <tr><td>Posisi</td><td>12.2</td><td>8.4</td><td>-3.8</td><td>-31.1% membaik</td><td class="trend-up">↗</td></tr>
-        </tbody>
-      </table>
+<h1>Laporan SEO September–Oktober 2025</h1>
+<p class="small">Diupdate: <strong>2025-11-01</strong> — Sumber data: Google Search Console.</p>
+<nav aria-label="Pilih domain" class="tabs" role="tablist">
+<button aria-controls="ahlifumigasi" aria-selected="true" class="tab-btn" role="tab">Ahlifumigasi.com</button>
+<button aria-controls="sensorgempa" aria-selected="false" class="tab-btn" role="tab">Sensorgempa.com</button>
+<button aria-controls="tanogaido" aria-selected="false" class="tab-btn" role="tab">Tanogaido.com</button>
+<button aria-controls="herbmedicine" aria-selected="false" class="tab-btn" role="tab">Herbmedicineindonesia.com</button>
+<button aria-controls="imporbarang" aria-selected="false" class="tab-btn" role="tab">Imporbarangjepang.com</button>
+</nav>
+<!-- ========== AHLIFUMIGASI ========== -->
+<section class="card" id="ahlifumigasi" role="tabpanel">
+<div class="screenshot">
+<p class="small">September → Oktober 2025</p>
+<img alt="Ahlifumigasi September" src="ahlifumigasi.png"/>
+</div>
+<h2>Ahlifumigasi.com — Ringkasan Performa</h2>
+<p class="small">September → Oktober 2025</p>
+<div class="table-wrapper">
+<table>
+<thead><tr><th>Metrik</th><th>September</th><th>Oktober</th><th>Perubahan Absolut</th><th>Perubahan %</th><th>Tren</th></tr></thead>
+<tbody>
+<tr><td>Klik</td><td>77</td><td>92</td><td>+15</td><td>+19.5%</td><td class="trend-up">↗</td></tr>
+<tr><td>Tayangan</td><td>4330</td><td>3090</td><td>-1240</td><td>-28.6%</td><td class="trend-down">↘</td></tr>
+<tr><td>CTR</td><td>1.8%</td><td>3.0%</td><td>+1.20 pp</td><td>+66.7%</td><td class="trend-up">↗</td></tr>
+<tr><td>Posisi</td><td>17.2</td><td>9.3</td><td>-7.9</td><td>-45.9% membaik</td><td class="trend-up">↗</td></tr>
+</tbody>
+</table>
+</div>
+<div class="analysis"><h4>Executive summary</h4><ul><li>Klik meningkat pada Oktober dibanding September.</li><li>Tayangan menurun.</li></ul><h4>Penyebab potensial</h4><ul><li>Snippet dan judul tampaknya lebih menarik.</li><li>Ranking menurun pada beberapa kueri.</li></ul><h4>Tindakan prioritas</h4><ul><li>Lanjutkan optimasi meta title dan description.</li><li>Optimalkan backlink dan perbarui konten utama.</li></ul><h4>KPI Monitoring</h4><ul><li>CTR per kueri.</li><li>Posisi rata-rata kueri utama.</li></ul></div>
+</section>
+<!-- ========== SENSORGEMPA ========== -->
+<section class="card" hidden="" id="sensorgempa" role="tabpanel">
+<div class="screenshot">
+<p class="small">September → Oktober 2025</p>
+<img alt="Ahlifumigasi September" src="sensorgempa.png"/>
+</div>
+<h2>Sensorgempa.com — Ringkasan Performa</h2>
+<p class="small">September → Oktober 2025</p>
+<div class="table-wrapper">
+<table>
+<thead><tr><th>Metrik</th><th>September</th><th>Oktober</th><th>Perubahan Absolut</th><th>Perubahan %</th><th>Tren</th></tr></thead>
+<tbody>
+<tr><td>Klik</td><td>400</td><td>484</td><td>+84</td><td>+21.0%</td><td class="trend-up">↗</td></tr>
+<tr><td>Tayangan</td><td>49700</td><td>63800</td><td>+14100</td><td>+28.4%</td><td class="trend-up">↗</td></tr>
+<tr><td>CTR</td><td>0.8%</td><td>0.8%</td><td>+0.00 pp</td><td>+0.0%</td><td class="trend-neutral">→</td></tr>
+<tr><td>Posisi</td><td>8.4</td><td>6.4</td><td>-2.0</td><td>-23.8% membaik</td><td class="trend-up">↗</td></tr>
+</tbody>
+</table>
+</div>
+<div class="analysis"><h4>Executive summary</h4><ul><li>Klik meningkat pada Oktober dibanding September.</li><li>Tayangan juga meningkat.</li></ul><h4>Penyebab potensial</h4><ul><li>CTR tidak banyak berubah.</li><li>Ranking menurun pada beberapa kueri.</li></ul><h4>Tindakan prioritas</h4><ul><li>Pantau CTR per kueri secara berkala.</li><li>Optimalkan backlink dan perbarui konten utama.</li></ul><h4>KPI Monitoring</h4><ul><li>CTR per kueri.</li><li>Posisi rata-rata kueri utama.</li></ul></div>
+</section>
+<!-- ========== TANOGAIDO ========== -->
+<section class="card" hidden="" id="tanogaido" role="tabpanel">
+<div class="screenshot">
+<p class="small">September → Oktober 2025</p>
+<img alt="Ahlifumigasi September" src="tanogaido.png"/>
+</div>
+<h2>Tanogaido.com — Ringkasan Performa</h2>
+<p class="small">September → Oktober 2025</p>
+<div class="table-wrapper">
+<table>
+<thead><tr><th>Metrik</th><th>September</th><th>Oktober</th><th>Perubahan Absolut</th><th>Perubahan %</th><th>Tren</th></tr></thead>
+<tbody>
+<tr><td>Klik</td><td>1740</td><td>1573</td><td>-167</td><td>-9.6%</td><td class="trend-down">↘</td></tr>
+<tr><td>Tayangan</td><td>225000</td><td>148000</td><td>-77000</td><td>-34.2%</td><td class="trend-down">↘</td></tr>
+<tr><td>CTR</td><td>0.8%</td><td>1.0%</td><td>+0.20 pp</td><td>+25.0%</td><td class="trend-up">↗</td></tr>
+<tr><td>Posisi</td><td>13.8</td><td>9.4</td><td>-4.4</td><td>-31.9% membaik</td><td class="trend-up">↗</td></tr>
+</tbody>
+</table>
+</div>
+<div class="analysis"><h4>Executive summary</h4><ul><li>Klik menurun pada Oktober dibanding September.</li><li>Tayangan menurun.</li></ul><h4>Penyebab potensial</h4><ul><li>Snippet dan judul tampaknya lebih menarik.</li><li>Ranking menurun pada beberapa kueri.</li></ul><h4>Tindakan prioritas</h4><ul><li>Lanjutkan optimasi meta title dan description.</li><li>Optimalkan backlink dan perbarui konten utama.</li></ul><h4>KPI Monitoring</h4><ul><li>CTR per kueri.</li><li>Posisi rata-rata kueri utama.</li></ul></div>
+</section>
+<!-- ========== HERBMEDICINE ========== -->
+<section class="card" hidden="" id="herbmedicine" role="tabpanel">
+<div class="screenshot">
+<p class="small">September → Oktober 2025</p>
+<img alt="Ahlifumigasi September" src="herbmedicine.png"/>
+</div>
+<h2>Herbmedicineindonesia.com — Ringkasan Performa</h2>
+<p class="small">September → Oktober 2025</p>
+<div class="table-wrapper">
+<table>
+<thead><tr><th>Metrik</th><th>September</th><th>Oktober</th><th>Perubahan Absolut</th><th>Perubahan %</th><th>Tren</th></tr></thead>
+<tbody>
+<tr><td>Klik</td><td>20</td><td>56</td><td>+36</td><td>+180.0%</td><td class="trend-up">↗</td></tr>
+<tr><td>Tayangan</td><td>4330</td><td>2840</td><td>-1490</td><td>-34.4%</td><td class="trend-down">↘</td></tr>
+<tr><td>CTR</td><td>0.7%</td><td>2.0%</td><td>+1.30 pp</td><td>+185.7%</td><td class="trend-up">↗</td></tr>
+<tr><td>Posisi</td><td>32.2</td><td>14.3</td><td>-17.9</td><td>-55.6% membaik</td><td class="trend-up">↗</td></tr>
+</tbody>
+</table>
+</div>
+<div class="analysis"><h4>Executive summary</h4><ul><li>Klik meningkat pada Oktober dibanding September.</li><li>Tayangan menurun.</li></ul><h4>Penyebab potensial</h4><ul><li>Snippet dan judul tampaknya lebih menarik.</li><li>Ranking menurun pada beberapa kueri.</li></ul><h4>Tindakan prioritas</h4><ul><li>Lanjutkan optimasi meta title dan description.</li><li>Optimalkan backlink dan perbarui konten utama.</li></ul><h4>KPI Monitoring</h4><ul><li>CTR per kueri.</li><li>Posisi rata-rata kueri utama.</li></ul></div>
+</section>
+<!-- ========== IMPORBARANG ========== -->
+<section class="card" hidden="" id="imporbarang" role="tabpanel">
+<div class="screenshot">
+<p class="small">September → Oktober 2025</p>
+<img alt="Ahlifumigasi September" src="importbarangjepang.png"/>
+</div>
+<h2>Imporbarangjepang.com — Ringkasan Performa</h2>
+<p class="small">September → Oktober 2025</p>
+<div class="table-wrapper">
+<table>
+<thead><tr><th>Metrik</th><th>September</th><th>Oktober</th><th>Perubahan Absolut</th><th>Perubahan %</th><th>Tren</th></tr></thead>
+<tbody>
+<tr><td>Klik</td><td>19</td><td>12</td><td>-7</td><td>-36.8%</td><td class="trend-down">↘</td></tr>
+<tr><td>Tayangan</td><td>973</td><td>725</td><td>-248</td><td>-25.5%</td><td class="trend-down">↘</td></tr>
+<tr><td>CTR</td><td>2.0%</td><td>1.7%</td><td>-0.30 pp</td><td>-15.0%</td><td class="trend-down">↘</td></tr>
+<tr><td>Posisi</td><td>17.2</td><td>10.7</td><td>-6.5</td><td>-37.8% membaik</td><td class="trend-up">↗</td></tr>
+</tbody>
+</table>
+</div>
+<div class="analysis"><h4>Executive summary</h4><ul><li>Klik menurun pada Oktober dibanding September.</li><li>Tayangan menurun.</li></ul><h4>Penyebab potensial</h4><ul><li>Perlu perbaikan CTR melalui optimasi snippet.</li><li>Ranking menurun pada beberapa kueri.</li></ul><h4>Tindakan prioritas</h4><ul><li>Uji ulang variasi judul halaman dengan CTR rendah.</li><li>Optimalkan backlink dan perbarui konten utama.</li></ul><h4>KPI Monitoring</h4><ul><li>CTR per kueri.</li><li>Posisi rata-rata kueri utama.</li></ul></div>
+</section>
+<!-- Modal -->
+<div aria-hidden="true" class="img-modal" id="imgModal" role="dialog"><img alt="Gambar diperbesar" id="modalImage" src=""/></div>
+</div>
+<script>
+const tabs=document.querySelectorAll('[role="tab"]');const panels=document.querySelectorAll('[role="tabpanel"]');
+tabs.forEach(tab=>{tab.addEventListener('click',()=>{tabs.forEach(t=>t.setAttribute('aria-selected','false'));
+panels.forEach(p=>p.hidden=true);tab.setAttribute('aria-selected','true');
+document.getElementById(tab.getAttribute('aria-controls')).hidden=false;window.scrollTo({top:72,behavior:'smooth'});});});
+document.querySelectorAll('.screenshot img').forEach(img=>{img.addEventListener('click',()=>{const modal=document.getElementById('imgModal');
+const modalImg=document.getElementById('modalImage');modalImg.src=img.src;modal.classList.add('show');});});
+document.getElementById('imgModal').addEventListener('click',e=>{if(e.target.id==='imgModal'){e.currentTarget.classList.remove('show');
+document.getElementById('modalImage').src='';}});
+</script>
+</body>
+</html>
     </div>
 
     <div class="analysis">
