--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ tr:nth-child(even) td{background:#FBFBFD;}
 </tbody>
 </table>
 </div>
-<div class="analysis"><h4>Executive summary</h4><ul><li>Klik menurun pada Oktober dibanding September.</li><li>Tayangan menurun.</li></ul><h4>Penyebab potensial</h4><ul><li>Snippet dan judul tampaknya lebih menarik.</li><li>Ranking menurun pada beberapa kueri.</li></ul><h4>Tindakan prioritas</h4><ul><li>Lanjutkan optimasi meta title dan description.</li><li>Optimalkan backlink dan perbarui konten utama.</li></ul><h4>KPI Monitoring</h4><ul><li>CTR per kueri.</li><li>Posisi rata-rata kueri utama.</li></ul></div>
+<div class="analysis"><h4>Executive summary</h4><ul><li>Klik menurun pada Oktober dibanding September hanya pada keyword bahasa dan terjemah sedangkan keyword utama mengalami peningkatan.</li><li>Tayangan menurun.</li><li>Ranking rata-rata meningkat menunjukan trend sangat positif di mesin pencari.</li></ul><h4>Penyebab potensial</h4><ul><li>Snippet dan judul tampaknya lebih menarik.</li><li>Ranking menurun pada beberapa kueri.</li></ul><h4>Tindakan prioritas</h4><ul><li>Lanjutkan optimasi meta title dan description.</li><li>Optimalkan backlink dan perbarui konten utama.</li></ul><h4>KPI Monitoring</h4><ul><li>CTR per kueri.</li><li>Posisi rata-rata kueri utama.</li></ul></div>
 </section>
 <!-- ========== HERBMEDICINE ========== -->
 <section class="card" hidden="" id="herbmedicine" role="tabpanel">
