--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ tr:nth-child(even) td{background:#FBFBFD;}
 </tbody>
 </table>
 </div>
-<div class="analysis"><h4>Executive summary</h4><ul><li>Klik meningkat pada Oktober dibanding September.</li><li>Tayangan menurun.</li><li>Ranking rata-rata meningkat menunjukan trend sangat positif di mesin pencari.</li></ul><h4>Penyebab potensial</h4><ul><li>Snippet dan judul tampaknya lebih menarik.</li><li>Ranking menurun pada beberapa kueri.</li></ul><h4>Tindakan prioritas</h4><ul><li>Lanjutkan optimasi meta title dan description.</li><li>Optimalkan backlink dan perbarui konten utama.</li></ul><h4>KPI Monitoring</h4><ul><li>CTR per kueri.</li><li>Posisi rata-rata kueri utama.</li></ul></div>
+<div class="analysis"><h4>Executive summary</h4><ul><li>Klik meningkat pada Oktober dibanding September.</li><li>Tayangan menurun.</li><li>Ranking rata-rata meningkat menunjukan trend sangat positif di mesin pencari.</li></ul><h4>Penyebab potensial</h4><ul><li>Snippet dan judul tampaknya lebih menarik.</li><li>Volume pencarian menurun tapi ranking rata terus meningkat</li></ul><h4>Tindakan prioritas</h4><ul><li>Lanjutkan optimasi meta title dan description.</li><li>Optimalkan backlink dan perbarui konten utama.</li></ul><h4>KPI Monitoring</h4><ul><li>CTR per kueri.</li><li>Posisi rata-rata kueri utama.</li></ul></div>
 </section>
 <!-- ========== SENSORGEMPA ========== -->
 <section class="card" hidden="" id="sensorgempa" role="tabpanel">
@@ -100,7 +100,7 @@ tr:nth-child(even) td{background:#FBFBFD;}
 </tbody>
 </table>
 </div>
-<div class="analysis"><h4>Executive summary</h4><ul><li>Klik meningkat pada Oktober dibanding September.</li><li>Tayangan juga meningkat.</li></ul><h4>Penyebab potensial</h4><ul><li>CTR tidak banyak berubah.</li><li>Ranking menurun pada beberapa kueri.</li></ul><h4>Tindakan prioritas</h4><ul><li>Pantau CTR per kueri secara berkala.</li><li>Optimalkan backlink dan perbarui konten utama.</li></ul><h4>KPI Monitoring</h4><ul><li>CTR per kueri.</li><li>Posisi rata-rata kueri utama.</li></ul></div>
+<div class="analysis"><h4>Executive summary</h4><ul><li>Klik meningkat pada Oktober dibanding September.</li><li>Tayangan juga meningkat.</li></ul><h4>Penyebab potensial</h4><ul><li>CTR tidak banyak berubah.</li><li>Ranking meningkat pada beberapa kueri.</li></ul><h4>Tindakan prioritas</h4><ul><li>Pantau CTR per kueri secara berkala.</li><li>Optimalkan backlink dan perbarui konten utama.</li></ul><h4>KPI Monitoring</h4><ul><li>CTR per kueri.</li><li>Posisi rata-rata kueri utama.</li></ul></div>
 </section>
 <!-- ========== TANOGAIDO ========== -->
 <section class="card" hidden="" id="tanogaido" role="tabpanel">
@@ -121,7 +121,7 @@ tr:nth-child(even) td{background:#FBFBFD;}
 </tbody>
 </table>
 </div>
-<div class="analysis"><h4>Executive summary</h4><ul><li>Klik menurun pada Oktober dibanding September hanya pada keyword bahasa dan terjemah sedangkan keyword utama mengalami peningkatan.</li><li>Tayangan menurun.</li><li>Ranking rata-rata meningkat menunjukan trend sangat positif di mesin pencari.</li></ul><h4>Penyebab potensial</h4><ul><li>Snippet dan judul tampaknya lebih menarik.</li><li>Ranking menurun pada beberapa kueri.</li></ul><h4>Tindakan prioritas</h4><ul><li>Lanjutkan optimasi meta title dan description.</li><li>Optimalkan backlink dan perbarui konten utama.</li></ul><h4>KPI Monitoring</h4><ul><li>CTR per kueri.</li><li>Posisi rata-rata kueri utama.</li></ul></div>
+<div class="analysis"><h4>Executive summary</h4><ul><li>Klik menurun pada Oktober dibanding September hanya pada keyword bahasa dan terjemah sedangkan keyword utama mengalami peningkatan.</li><li>Tayangan menurun.</li><li>Ranking rata-rata meningkat menunjukan trend sangat positif di mesin pencari.</li></ul><h4>Penyebab potensial</h4><ul><li>Snippet dan judul tampaknya lebih menarik.</li><li>Volume pencarian menurun pada beberapa kueri bahasa.</li></ul><h4>Tindakan prioritas</h4><ul><li>Lanjutkan optimasi meta title dan description.</li><li>Optimalkan backlink dan perbarui konten utama.</li></ul><h4>KPI Monitoring</h4><ul><li>CTR per kueri.</li><li>Posisi rata-rata kueri utama.</li></ul></div>
 </section>
 <!-- ========== HERBMEDICINE ========== -->
 <section class="card" hidden="" id="herbmedicine" role="tabpanel">
@@ -142,7 +142,7 @@ tr:nth-child(even) td{background:#FBFBFD;}
 </tbody>
 </table>
 </div>
-<div class="analysis"><h4>Executive summary</h4><ul><li>Klik meningkat pada Oktober dibanding September.</li><li>Tayangan menurun.</li><li>Ranking rata-rata meningkat menunjukan trend sangat positif di mesin pencari.</li></ul><h4>Penyebab potensial</h4><ul><li>Snippet dan judul tampaknya lebih menarik.</li><li>Ranking menurun pada beberapa kueri.</li></ul><h4>Tindakan prioritas</h4><ul><li>Lanjutkan optimasi meta title dan description.</li><li>Optimalkan backlink dan perbarui konten utama.</li></ul><h4>KPI Monitoring</h4><ul><li>CTR per kueri.</li><li>Posisi rata-rata kueri utama.</li></ul></div>
+<div class="analysis"><h4>Executive summary</h4><ul><li>Klik meningkat pada Oktober dibanding September.</li><li>Tayangan menurun.</li><li>Ranking rata-rata meningkat menunjukan trend sangat positif di mesin pencari.</li></ul><h4>Penyebab potensial</h4><ul><li>Snippet dan judul tampaknya lebih menarik.</li><li>Ranking menurun pada beberapa kueri yang tidak relevan.</li></ul><h4>Tindakan prioritas</h4><ul><li>Lanjutkan optimasi meta title dan description.</li><li>Optimalkan backlink dan perbarui konten utama.</li></ul><h4>KPI Monitoring</h4><ul><li>CTR per kueri.</li><li>Posisi rata-rata kueri utama.</li></ul></div>
 </section>
 <!-- ========== IMPORBARANG ========== -->
 <section class="card" hidden="" id="imporbarang" role="tabpanel">
@@ -163,7 +163,7 @@ tr:nth-child(even) td{background:#FBFBFD;}
 </tbody>
 </table>
 </div>
-<div class="analysis"><h4>Executive summary</h4><ul><li>Klik menurun pada Oktober dibanding September.</li><li>Tayangan menurun.</li><li>Ranking rata-rata meningkat menunjukan trend sangat positif di mesin pencari.</li></ul><h4>Penyebab potensial</h4><ul><li>Perlu perbaikan CTR melalui optimasi snippet.</li><li>Ranking menurun pada beberapa kueri.</li></ul><h4>Tindakan prioritas</h4><ul><li>Uji ulang variasi judul halaman dengan CTR rendah.</li><li>Optimalkan backlink dan perbarui konten utama.</li></ul><h4>KPI Monitoring</h4><ul><li>CTR per kueri.</li><li>Posisi rata-rata kueri utama.</li></ul></div>
+<div class="analysis"><h4>Executive summary</h4><ul><li>Klik menurun pada Oktober dibanding September.</li><li>Tayangan menurun.</li><li>Ranking rata-rata meningkat menunjukan trend sangat positif di mesin pencari.</li></ul><h4>Penyebab potensial</h4><ul><li>Perlu perbaikan CTR melalui optimasi snippet.</li><li>Volume Pencarian rendah beberapa kueri.</li></ul><h4>Tindakan prioritas</h4><ul><li>Uji ulang variasi judul halaman dengan CTR rendah.</li><li>Optimalkan backlink dan perbarui konten utama.</li></ul><h4>KPI Monitoring</h4><ul><li>CTR per kueri.</li><li>Posisi rata-rata kueri utama.</li></ul></div>
 </section>
 <!-- Modal -->
 <div aria-hidden="true" class="img-modal" id="imgModal" role="dialog"><img alt="Gambar diperbesar" id="modalImage" src=""/></div>
