--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@ tr:nth-child(even) td{background:#FBFBFD;}
 </div>
 <h2>Herbmedicineindonesia.com — Ringkasan Performa</h2>
 <p class="small">September → Oktober 2025</p>
+  <img alt="Ahlifumigasi September" src="herbmedichine.png"/>
 <div class="table-wrapper">
 <table>
 <thead><tr><th>Metrik</th><th>September</th><th>Oktober</th><th>Perubahan Absolut</th><th>Perubahan %</th><th>Tren</th></tr></thead>
@@ -148,7 +149,7 @@ tr:nth-child(even) td{background:#FBFBFD;}
 <section class="card" hidden="" id="imporbarang" role="tabpanel">
 <div class="screenshot">
 <p class="small">September → Oktober 2025</p>
-<img alt="Ahlifumigasi September" src="importbarangjepang.png"/>
+<img alt="Ahlifumigasi September" src="imporbarangjepang.png"/>
 </div>
 <h2>Imporbarangjepang.com — Ringkasan Performa</h2>
 <p class="small">September → Oktober 2025</p>
